Revert "Fix ability for content to overflow on mobile"
This reverts commit f3cb9dcb78a3d70fafbb2ac90b6142a826bc1cc5.

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,7 +5,6 @@
     flex-direction: column;
 
     min-height: 100%;
-    width: 100%;
 }
 
 .page-hero {
